# AnywhereInput

./: .flake8  .gitignore  BUGS.md  CHANGELOG.md  CONTRIBUTING.md  IMPORTANT.md  LICENSE  Mouse-controller-app.txt  README.md  Roadmap.md  android_controller.html  client.html  launch_with_cloudflare.bat  launch_with_ngrok.py  launch_with_pinggy.bat  launch_with_tunnel.py  launch_with_zrok2.bat  pyproject.toml  qr_display.py  requirements.txt  run.bat  run.sh  secure_server.py  setup_linux.sh  setup_windows.bat  start_with_ngrok.bat  start_with_ngrok.sh  zrok2_repair.bat
.github/workflows/: python-tests.yml
config/: recovery.yaml  recovery.yaml.example  settings.yaml  settings.yaml.example
contrib/: anywhereinput-server.service
docs/: API.md  IMPORTANT.md  INSTALL.md  SECURITY.md  TUNNELS.md  USAGE.md  WINDOWS_GUIDE.md
scripts/common/: launch_with_tunnel.py
scripts/unix/: run.sh  setup.sh
scripts/windows/: launch_cloudflare.bat  launch_ngrok.bat  launch_pinggy.bat  launch_tailscale.bat  launch_zrok2.bat  run.bat  setup.bat
src/anywhereinput/: __init__.py  __main__.py  _connection_requests.py  _constants.py  _ip.py  _permissions.py  _safe_print.py  admin_app.py  auth.py  capture_recovery.py  client.py  config_cmd.py  config_loader.py  launcher.py  logging_config.py  mouse_worker.py  qr_display.py  screen_capture.py  server.py  server_core.py  tunnel_manager.py  win_display_recovery.py  zrok2_repair.py
src/anywhereinput/admin/: __init__.py  _activity_log.py  _approval_dialog.py  _capture_modes.py  _client_dialog.py  _connection_notification.py  _engine_status.py  _info_panel.py  _main_window.py  _server_worker.py  _settings_panel.py  _status_bar.py  _token_dialog.py  _token_store.py  _tray_app.py  _tunnel_status.py  _utils.py  _welcome_wizard.py
src/anywhereinput/admin/main_window/: __init__.py  _client_management.py  _log_management.py  _metrics.py  _notifications.py  _request_management.py  _server_control.py  _token_management.py  _ui_helpers.py  _ui_setup.py
src/anywhereinput/screen_capture/: __init__.py  base.py  models.py  utils.py
src/anywhereinput/screen_capture/backends/: __init__.py  macos.py  windows.py  x11.py
src/anywhereinput/server/: __init__.py  _rate_limiter.py  _request_handlers.py  _token_handlers.py  server_broadcast.py  server_clients.py  server_core.py  server_http.py  server_lifecycle.py  server_messages.py  server_ws.py
src/anywhereinput/server_api/: __init__.py  _request_handlers.py  _token_handlers.py
src/anywhereinput/static/: app.js  base.css  client.html  components.css  controls.css  stream.css  style.css
src/anywhereinput/static/core/: AnywhereInputClient.js  ConnectionManager.js  EngineMonitor.js  ScreenManager.js
src/anywhereinput/static/input/: ControlButtons.js  KeyboardHandler.js  ScreenClickHandler.js  TouchpadHandler.js
src/anywhereinput/static/ui/: ScreenStatusOverlay.js  UIManager.js
src/anywhereinput/static/utils/: Permissions.js  RequestConnect.js  Storage.js  Viewport.js
tests/: conftest.py  test_admin_app.py  test_auth.py  test_capture_modes.py  test_cli.py  test_client_handler.py  test_config.py  test_config_loader.py  test_logging_config.py  test_qr_display.py  test_rate_limiter.py  test_regression.py  test_request_handlers.py  test_safe_print.py  test_screen_capture.py  test_screen_capture_factory.py  test_screen_capture_linux.py  test_screen_capture_macos.py  test_screen_capture_utils.py  test_screen_capture_windows.py  test_server  test_server_edge_cases.py  test_token_handlers.py  test_tunnel_manager.py  test_zrok2_repair.py  ws_test.py
