[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anywhereinput"
version = "1.2.7"
description = "Remote control your PC from any browser."
readme = "README-pypi.md"
license = {text = "MIT"}
authors = [
    {name = "Z-Hussein"}
]
keywords = ["remote-control", "screen-sharing", "websocket", "remote-desktop", "cross-platform"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = [
    "pyautogui>=0.9.54",
    "aiohttp>=3.14.1",
    "requests>=2.34.2",
    "qrcode[pil]>=8.2",
    "mss>=10.2.0",
    "Pillow>=12.3.0",
    "pyyaml>=6.0.3",
    "PyQt6>=6.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "black>=26.5.1",
    "flake8>=7.3.0",
    "mypy>=2.1.0",
]


[project.scripts]
anywhereinput = "anywhereinput.__main__:main"
ai-server = "anywhereinput.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
anywhereinput = ["static/*", "static/**/*"]
